--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       <div class="row">
         <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
           <div>
-            <h1>App landing page template</h1>
-            <h2>Lorem ipsum dolor sit amet, tota senserit percipitur ius ut, usu et fastidii forensibus voluptatibus. His ei nihil feugait</h2> 
+            <h1>Smile and serve, serve and Smile</h1>
+            <h2>Open your heart to those who are in need, we stand together!</h2> 
             <a href="./donate.html" class="download-btn"><i class="bx bx-heart"></i>Donate</a>
             <a href="#" class="btn"><i class="bx bx-last-page"></i>Learn more</a>
           </div>
@@ -72,8 +72,8 @@
         <div class="container" data-aos="fade-up">
   
           <div class="section-title">
-            <h2>Gallery</h2>
-            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+            <h2>Support</h2>
+            <p>You can support Ukraine. Donate now to where it is needed & change a child life. For Every Child - Food, Healthcare, Education and a safe place to grow up. Mask Off. Yuva CDC. Perspective. Income Generation Program. Language Learning Program..</p>
           </div>
   
         </div>
