--- a/hospital.html
+++ b/hospital.html
@@ -152,25 +152,30 @@
         <h2>Register Hospital</h2>
 
 		<div class="container">
-			<form>
-				<div class="form-group row">
-					<label for="inputName" class="col-sm-1-12 col-form-label">Enter Hospital</label>
-					<div class="col-sm-1-12">
-						<input type="text" class="form-control" name="inputName" id="inputName" placeholder="">
-					</div>
-				</div>
-				<fieldset class="form-group row">
-					<label class="col-form-legend col-sm-1-12">Hospital Name</label>
-					<div class="col-sm-1-12">
-						
-					</div>
-				</fieldset>
-				<div class="form-group row">
-					<div class="offset-sm-2 col-sm-10">
-						<button type="submit" class="btn btn-primary align-content-lg-stretch">Action</button>
-					</div>
-				</div>
-			</form>
+    <form>
+		<table style="width:25%"> 
+            <tr>
+			<td>Enter Hospital Id:</td>
+			<td><input type="text" id="id1" name="id1"></td>
+		  </tr>
+            <tr>
+			<td> Hospital Name:</td>
+			<td><input type="text" id="name1" name="name1"></td>
+		  </tr>
+            <tr>
+			<td>Hospital Address:</td>
+			<td><input type="text" id="addr" name="addr"></td>
+		  </tr>
+            <tr>
+			<td>Hospital Specification:</td>
+			<td><input type="text" id="spec" name="spec"></td>
+		  </tr>
+		  <tr>
+		  <td><input type="button" onclick="add_details()" value="Register"></td>
+		  </tr>
+		</table>
+		
+	</form>
 		</div>
         <h3>To get details of a hospital  <a href="hospital_details.html">Click Here</a></h3>
     </body>
